# keep-npu

./: .gitignore  LICENSE  MANIFEST.in  README.md  keep_npu_alive.py  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: compatibility.md  releasing.md
docs/superpowers/plans/: 2026-07-21-default-aicore-workload.md  2026-07-21-keepgpu-parity.md
docs/superpowers/specs/: 2026-07-21-default-aicore-workload-design.md  2026-07-21-keepgpu-parity-design.md
docs/validation/: ascend-remote-results.md
src/keep_npu/: __init__.py  cli.py  legacy.py
src/keep_npu/global_npu_controller/: __init__.py  global_npu_controller.py
src/keep_npu/mcp/: server.py
src/keep_npu/mcp/static/: index.html
src/keep_npu/mcp/static/assets/: dashboard.js  index.css
src/keep_npu/single_npu_controller/: __init__.py  ascend_npu_controller.py  base_npu_controller.py  workload.py
src/keep_npu/utilities/: __init__.py  endpoint_validation.py  humanized_input.py  json_protocol.py  logger.py  npu_info.py  npu_monitor.py  platform_manager.py  session_config.py
tests/: __init__.py  conftest.py  polling.py  test_ascend_backend.py  test_cli_service_commands.py  test_cli_thresholds.py  test_global_npu_controller.py  test_keep_npu_alive.py  test_npu_info.py  test_workload.py
tests/mcp/: test_http_api.py  test_server.py
tests/utilities/: test_endpoint_validation.py  test_humanized_input.py  test_logger.py  test_session_config.py
web/dashboard/: index.html  package-lock.json  package.json  staticAssets.test.js  tailwind.config.js  vite.config.js
web/dashboard/src/: App.jsx  App.test.jsx  index.css
web/dashboard/src/lib/: api.js  api.test.js  refresh.js  refresh.test.js  session.js  session.test.js
